--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -1,8 +1,16 @@
+
+#Ambiente de prueba
+#spring.datasource.url=jdbc:mysql://localhost:3306/backendborro?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
+
+
+#Ambiente de produccion
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/backendborro?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.url=jdbc:mysql://uyuwotvlvrydvy48:BCqI5ZXcybZ6HutRLgyI@bpl6ijfvplilmhbcxgjs-mysql.services.clever-cloud.com:3306/bpl6ijfvplilmhbcxgjs
+spring.datasource.username=uyuwotvlvrydvy48
+spring.datasource.password=BCqI5ZXcybZ6HutRLgyI
 
 #JWT
 jwt.secret = secret
