--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.url=jdbc:mysql://uyuwotvlvrydvy48:BCqI5ZXcybZ6HutRLgyI@bpl6ijfvplilmhbcxgjs-mysql.services.clever-cloud.com:3306/bpl6ijfvplilmhbcxgjs
 spring.datasource.username=uyuwotvlvrydvy48
 spring.datasource.password=BCqI5ZXcybZ6HutRLgyI
+server.port=${PORT:8080}
 
 #JWT
 jwt.secret = secret
