--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -3,15 +3,15 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #Ambiente de prueba
-#spring.datasource.url=jdbc:mysql://localhost:3306/backendborro?useSSL=false&serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/backendborro?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
 
 #Ambiente de produccion
-spring.datasource.url=jdbc:mysql://uyuwotvlvrydvy48:BCqI5ZXcybZ6HutRLgyI@bpl6ijfvplilmhbcxgjs-mysql.services.clever-cloud.com:3306/bpl6ijfvplilmhbcxgjs
-spring.datasource.username=uyuwotvlvrydvy48
-spring.datasource.password=BCqI5ZXcybZ6HutRLgyI
-server.port=${PORT:8080}
+#spring.datasource.url=jdbc:mysql://uyuwotvlvrydvy48:BCqI5ZXcybZ6HutRLgyI@bpl6ijfvplilmhbcxgjs-mysql.services.clever-cloud.com:3306/bpl6ijfvplilmhbcxgjs
+#spring.datasource.username=uyuwotvlvrydvy48
+#spring.datasource.password=BCqI5ZXcybZ6HutRLgyI
+#server.port=${PORT:8080}
 
 #JWT
 jwt.secret = secret
